New backup from 04-06-23

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -6,6 +6,8 @@
 [include print_start.cfg]
 [include timelapse.cfg]
 
+[include adxl.cfg]
+
 [virtual_sdcard]
 path: /home/patrikthedev/printer_data/gcodes
 on_error_gcode: PAUSE
@@ -42,7 +44,7 @@ homing_retract_dist: 0
 uart_pin: PC4
 diag_pin: PG6
 interpolate: True
-run_current: 0.65
+run_current: 0.7
 hold_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 999999
@@ -64,7 +66,7 @@ homing_retract_dist: 0
 uart_pin: PD11
 diag_pin: PG9
 interpolate: True
-run_current: 0.65
+run_current: 0.7
 hold_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 999999
@@ -135,7 +137,7 @@ samples: 2
 pin_move_time: 0.25
 
 [bed_mesh]
-speed: 150
+speed: 250
 horizontal_move_z: 5
 mesh_min: 30, 45
 mesh_max: 260, 260
@@ -149,9 +151,9 @@ fade_target: 0
 
 [safe_z_home]
 home_xy_position: 123, 132
-speed: 150
+speed: 250
 z_hop: 10
-z_hop_speed: 20
+z_hop_speed: 40
 
 
 
@@ -181,7 +183,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0D000F001250535556323420-if00
 kinematics: corexy
 max_velocity: 500
 max_accel: 6000
-max_z_velocity: 25
+max_z_velocity: 50
 max_z_accel: 500
 
 [z_tilt]
